--- a/NEWS
+++ b/NEWS
@@ -284,16 +284,49 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG5400 (EXPERIMENTAL)
        Canon PIXMA MG6300 (EXPERIMENTAL)
 
+     - Canon dye-sublimation printers:
+
+       Canon SELPHY CP810
+       Canon SELPHY CP900
+
+       Added back after removal in 5.2.9 release:
+
+       Canon SELPHY CP600
+       Canon SELPHY CP720
+       Canon SELPHY CP780 (including improved support)
+       Canon SELPHY CP800
+       Canon SELPHY ES1
+       Canon SELPHY ES2
+       Canon SELPHY ES3
+       Canon SELPHY ES20
+       Canon SELPHY ES30
+       Canon SELPHY ES40
+
+       Improved support:
+
+       Canon SELPHY CP520
+       Canon SELPHY CP530
+       Canon SELPHY CP740
+       Canon SELPHY CP750
+       Canon SELPHY CP760
+       Canon SELPHY CP770
+
+       The intelligent CUPS spooler required to support the 
+       SELPHY CP and ES models is now part of the gutenprint package.
+       The USB PIDs for the following two SELPHY CP series models
+       are still missing, and therefore unsupported in the spooler:
+
+       Canon SELPHY CP520
+       Canon SELPHY CP790
+
   2) The following Canon printer models were not added, as they cannot
      currently be supported, even experimentally, owing to an as-yet
      unknown command format or other issues:
 
        Canon PIXMA PRO-10  *1
        Canon PIXMA PRO-100 *1
-       Canon SELPHY CP900  *2
 
        *1: protocol is supported but inks used are not yet supported
-       *2: requires special communication protocol
 
   3) Added duplex support for the EPSON WorkForce 645.
 
