--- a/NEWS
+++ b/NEWS
@@ -301,14 +301,24 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX457  (EXPERIMENTAL)
        Canon PIXMA MX458  (EXPERIMENTAL)
 
+       Canon MX520 series (EXPERIMENTAL)
+       Canon PIXMA MX521  (EXPERIMENTAL)
+       Canon PIXMA MX522  (EXPERIMENTAL)
+       Canon PIXMA MX523  (EXPERIMENTAL)
+       Canon PIXMA MX524  (EXPERIMENTAL)
+       Canon PIXMA MX525  (EXPERIMENTAL)
+       Canon PIXMA MX526  (EXPERIMENTAL)
+       Canon PIXMA MX527  (EXPERIMENTAL)
+       Canon PIXMA MX528  (EXPERIMENTAL)
+
        Note: Area codes as follows:
              1: Latin America
              2: USA
              3: Japan
-             4: Europe
+             4: Europe/Africa
              5: UK
-             6: Australia
-             7: India
+             6: Australia/New Zealand
+             7: India/South Asia
              8: China
              (for MG series includes a trailing 0)
 
