Experimental support for Canon MX720 series (MX721, MX722, MX726, MX727, MX728). Corrected media and modes for MX920 series.

--- a/NEWS
+++ b/NEWS
@@ -311,6 +311,13 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX527  (EXPERIMENTAL)
        Canon PIXMA MX528  (EXPERIMENTAL)
 
+       Canon MX720 series (EXPERIMENTAL)
+       Canon PIXMA MX721  (EXPERIMENTAL)
+       Canon PIXMA MX722  (EXPERIMENTAL)
+       Canon PIXMA MX726  (EXPERIMENTAL)
+       Canon PIXMA MX727  (EXPERIMENTAL)
+       Canon PIXMA MX728  (EXPERIMENTAL)
+
        Canon MX920 series (EXPERIMENTAL)
        Canon PIXMA MX922  (EXPERIMENTAL)
        Canon PIXUS MX923  (EXPERIMENTAL)
